<?xml version="1.0"?>
<package format="2">
  <name>ros1_launch_utils</name>
  <version>0.0.1</version>
  <description>The ros1_launch_utils package</description>

  <maintainer email="endre90@gmail.com">endre</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
